hard-gists/1fa4f3360ffdb1e69507/run.log
=== Docker Run Log for 1fa4f3360ffdb1e69507 ===
Started at: Mi 29. Okt 12:56:15 CET 2025

[2025-10-29 12:56:16] START: Running container for 1fa4f3360ffdb1e69507
[2025-10-29 12:56:16] SUCCESS: Container b7b425032335d41d68e0231291cc27603ee4bd57090f2dbd3741c69b33b0f9e7 started for 1fa4f3360ffdb1e69507
=== Container logs for 1fa4f3360ffdb1e69507 ===
  File "/snippet.py", line 34
    print foldername + ': ' + comment + ' (' + data + ')'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1fa4f3360ffdb1e69507 ===
[2025-10-29 12:56:18] INFO: Container b7b425032335d41d68e0231291cc27603ee4bd57090f2dbd3741c69b33b0f9e7 has stopped
